Lesson 016: first commit

--- a/.gitignore
+++ b/.gitignore
@@ -8209,3 +8209,18 @@ Lesson015/node_modules/yallist/LICENSE
 Lesson015/node_modules/yallist/package.json
 Lesson015/node_modules/yallist/README.md
 Lesson015/node_modules/yallist/yallist.js
+lesson016/src/App.css
+lesson016/src/App.js
+lesson016/src/App.test.js
+lesson016/src/index.css
+lesson016/src/index.js
+lesson016/src/logo.svg
+lesson016/src/reportWebVitals.js
+lesson016/src/setupTests.js
+lesson016/src/components/post/post.css
+lesson016/src/components/post/post.js
+lesson016/.gitignore
+lesson016/package-lock.json
+lesson016/package.json
+lesson016/README.md
+.gitignore
